--- a/index.html
+++ b/index.html
@@ -1308,206 +1308,207 @@
 				<div class="d:f@md fw:w fw:b c:b bgc:b" style="margin-left: -.25rem; margin-right: -.25rem;">
 					<div class="p:1r bgc:w bw:medium fb:20% ta:c bc:w"> white
 						<br> <code>bgc:w</code> </div>
-					<div class="p:1r bgc:w.9 bw:medium fb:20% ta:c bc:w"> white .9
+					<div class="p:1r bgc:w.9 bw:medium fb:20% ta:c bc:w "> white .9
 						<br> <code>bgc:w.9</code> </div>
-					<div class="p:1r bgc:w.8 bw:medium fb:20% ta:c bc:w"> white .8
+					<div class="p:1r bgc:w.8 bw:medium fb:20% ta:c bc:w "> white .8
 						<br> <code>bgc:w.8</code> </div>
-					<div cldiv class="p:1r bgc:w.7 bw:medium fb:20% ta:c bc:w"> white .7
+					<div cldiv class="p:1r bgc:w.7 bw:medium fb:20% ta:c bc:w "> white .7
 						<br <br> <code>bgc:w.7</code> </div>
-					<div class="p:1r bgc:w.6 bw:medium fb:20% ta:c bc:w"> white white .6
+					<div class="p:1r bgc:w.6 bw:medium fb:20% ta:c bc:w "> white white .6
 						<br> <code>bgc:w.6</code> </div>
-					<div class="p:1r bgc:w.5 bw:medium fb:20% ta:c bc:w"> white .5
+					<div class="p:1r bgc:w.5 bw:medium fb:20% ta:c bc:w "> white .5
 						<br> <code>bgc:w.5</code> </div>
-					<div class="p:1r bgc:w.4 bw:medium fb:20% ta:c bc:w"> white .4
+					<div class="p:1r bgc:w.4 bw:medium fb:20% ta:c bc:w "> white .4
 						<br> <code>bgc:w.4</code> </div>
-					<div class="p:1r bgc:w.3 bw:medium fb:20% ta:c bc:w"> white .3
+					<div class="p:1r bgc:w.3 bw:medium fb:20% ta:c bc:w "> white .3
 						<br> <code>bgc:w.3</code> </div>
-					<div class="p:1r bgc:w.2 bw:medium fb:20% ta:c bc:w"> white .2
+					<div class="p:1r bgc:w.2 bw:medium fb:20% ta:c bc:w "> white .2
 						<br> <code>bgc:w.2</code> </div>
-					<div class="p:1r bgc:w.1 bw:medium fb:20% ta:c bc:w"> white .1
+					<div class="p:1r bgc:w.1 bw:medium fb:20% ta:c bc:w "> white .1
 						<br> <code>bgc:w.1</code> </div>
 				</div> <small>The white shades are placed on a black background in order to show the blending effect.</small>
 				<!-- overlay demo -->
 				<h4>Creating tints with a little parent/child nesting trick</h4>
 				<p>For example: <code>bgc:blue + bgc:w.9</code></p>
-				<div class="bgc:blue c:w.5 d:f@lg">
-					<div class="p:1r bgc:w.9"></div>
-					<div class="p:1r bgc:w.8"></div>
-					<div class="p:1r bgc:w.7"></div>
-					<div class="p:1r bgc:w.6"></div>
-					<div class="p:1r bgc:w.5"></div>
-					<div class="p:1r bgc:w.4"></div>
-					<div class="p:1r bgc:w.3"></div>
-					<div class="p:1r bgc:w.2"></div>
-					<div class="p:1r bgc:w.1"></div>
-					<div class="p:1r ta:c tt:u ls:1e fg:1">shades of blue</div>
-					<div class="p:1r bgc:b.1"></div>
-					<div class="p:1r bgc:b.2"></div>
-					<div class="p:1r bgc:b.3"></div>
-					<div class="p:1r bgc:b.4"></div>
-					<div class="p:1r bgc:b.5"></div>
-					<div class="p:1r bgc:b.6"></div>
-					<div class="p:1r bgc:b.7"></div>
-					<div class="p:1r bgc:b.8"></div>
-					<div class="p:1r bgc:b.9"></div>
+				<div class="bgc:blue c:w.5 d:f@lg ">
+					<div class="p:1r bgc:w.9 "></div>
+					<div class="p:1r bgc:w.8 "></div>
+					<div class="p:1r bgc:w.7 "></div>
+					<div class="p:1r bgc:w.6 "></div>
+					<div class="p:1r bgc:w.5 "></div>
+					<div class="p:1r bgc:w.4 "></div>
+					<div class="p:1r bgc:w.3 "></div>
+					<div class="p:1r bgc:w.2 "></div>
+					<div class="p:1r bgc:w.1 "></div>
+					<div class="p:1r ta:c tt:u ls:1e fg:1 ">shades of blue</div>
+					<div class="p:1r bgc:b.1 "></div>
+					<div class="p:1r bgc:b.2 "></div>
+					<div class="p:1r bgc:b.3 "></div>
+					<div class="p:1r bgc:b.4 "></div>
+					<div class="p:1r bgc:b.5 "></div>
+					<div class="p:1r bgc:b.6 "></div>
+					<div class="p:1r bgc:b.7 "></div>
+					<div class="p:1r bgc:b.8 "></div>
+					<div class="p:1r bgc:b.9 "></div>
 				</div>
 			</article>
-			<article id="theme__border-color">
-				<header class="p:r">
+			<article id="theme__border-color ">
+				<header class="p:r ">
 					<h3>border-color</h3>
-					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r ">H</div>
 				</header>
 				<!-- transparent -->
-				<div class="p:1r bc:t bw:thick fw:b fb:20% ta:c"> <span>transparent</span>
+				<div class="p:1r bc:t bw:thick fw:b fb:20% ta:c "> <span>transparent</span>
 					<br> <code>bc:t</code> </div>
-				<div class="d:f@md fw:w fw:b">
-					<div class="p:1r bc:red bw:thick fb:20% ta:c"> red
+				<div class="d:f@md fw:w fw:b ">
+					<div class="p:1r bc:red bw:thick fb:20% ta:c "> red
 						<br> <code>bc:red</code> </div>
-					<div class="p:1r bc:orange bw:thick fb:20% ta:c"> orange
+					<div class="p:1r bc:orange bw:thick fb:20% ta:c "> orange
 						<br> <code>bc:orange</code> </div>
-					<div class="p:1r bc:yellow bw:thick fb:20% ta:c"> yellow
+					<div class="p:1r bc:yellow bw:thick fb:20% ta:c "> yellow
 						<br> <code>bc:yellow</code> </div>
-					<div class="p:1r bc:lime bw:thick fb:20% ta:c"> lime
+					<div class="p:1r bc:lime bw:thick fb:20% ta:c "> lime
 						<br> <code>bc:lime</code> </div>
-					<div class="p:1r bc:grgreen bw:thick fb:20% ta:c"> green
+					<div class="p:1r bc:green bw:thick fb:20% ta:c "> green
 						<br> <code>bc:green</code> </div>
-					<div class="p:1r bc:teal bw:thick fb:20% ta:c"> teal
+					<div class="p:1r bc:teal bw:thick fb:20% ta:c "> teal
 						<br> <code>bc:teal</code> </div>
-					<div class="p:1r bc:cyan bw:thick fb:20% ta:c"> cyan
+					<div class="p:1r bc:cyan bw:thick fb:20% ta:c "> cyan
 						<br> <code>bc:cyan</code> </div>
-					<div class="p:1r bc:blue bw:thick fb:20% ta:c"> blue
+					<div class="p:1r bc:blue bw:thick fb:20% ta:c "> blue
 						<br> <code>bc:blue</code> </div>
-					<div class="p:1r bc:indigo bw:thick fb:20% ta:c"> indigo
+					<div class="p:1r bc:indigo bw:thick fb:20% ta:c "> indigo
 						<br> <code>bc:indigo</code> </div>
-					<div class="p:1r bc:violet bw:thick fb:20% ta:c"> violet
+					<div class="p:1r bc:violet bw:thick fb:20% ta:c "> violet
 						<br> <code>bc:violet</code> </div>
-					<div class="p:1r bc:magenta bw:thick fb:20% ta:c"> magenta
+					<div class="p:1r bc:magenta bw:thick fb:20% ta:c "> magenta
 						<br> <code>bc:magenta</code> </div>
-					<div class="p:1r bc:pink bw:thick fb:20% ta:c"> pink
+					<div class="p:1r bc:pink bw:thick fb:20% ta:c "> pink
 						<br> <code>bc:pink</code> </div>
-					<div class="p:1r bc:brown bw:thick fb:20% ta:c"> brown
+					<div class="p:1r bc:brown bw:thick fb:20% ta:c "> brown
 						<br> <code>bc:brown</code> </div>
 				</div>
 				<!-- shades of black -->
-				<div class="d:f@md fw:w fw:b">
-					<div class="p:1r bc:b bw:thick fb:20% ta:c"> black
+				<div class="d:f@md fw:w fw:b ">
+					<div class="p:1r bc:b bw:thick fb:20% ta:c "> black
 						<br> <code>bc:b</code> </div>
-					<div class="p:1r bc:b.9 bw:thick fb:20% ta:c"> black .9
+					<div class="p:1r bc:b.9 bw:thick fb:20% ta:c "> black .9
 						<br> <code>bc:b.9</code> </div>
-					<div class="p:1r bc:b.8 bw:thick fb:20% ta:c"> black .8
+					<div class="p:1r bc:b.8 bw:thick fb:20% ta:c "> black .8
 						<br> <code>bc:b.8</code> </div>
-					<div class="p:1r bc:b.7 bw:thick fb:20% ta:c"> black .7
+					<div class="p:1r bc:b.7 bw:thick fb:20% ta:c "> black .7
 						<br> <code>bc:b.7</code> </div>
-					<div class="p:1r bc:b.6 bw:thick fb:20% ta:c"> black .6
+					<div class="p:1r bc:b.6 bw:thick fb:20% ta:c "> black .6
 						<br> <code>bc:b.6</code> </div>
-					<div class="p:1r bc:b.5 bw:thick fb:20% ta:c"> black .5
+					<div class="p:1r bc:b.5 bw:thick fb:20% ta:c "> black .5
 						<br> <code>bc:b.5</code> </div>
-					<div class="p:1r bc:b.4 bw:thick fb:20% ta:c"> black .4
+					<div class="p:1r bc:b.4 bw:thick fb:20% ta:c "> black .4
 						<br> <code>bc:b.4</code> </div>
-					<div class="p:1r bc:b.3 bw:thick fb:20% ta:c"> black .3
+					<div class="p:1r bc:b.3 bw:thick fb:20% ta:c "> black .3
 						<br> <code>bc:b.3</code> </div>
-					<div class="p:1r bc:b.2 bw:thick fb:20% ta:c"> black .2
+					<div class="p:1r bc:b.2 bw:thick fb:20% ta:c "> black .2
 						<br> <code>bc:b.2</code> </div>
-					<div class="p:1r bc:b.1 bw:thick fb:20% ta:c"> black .1
+					<div class="p:1r bc:b.1 bw:thick fb:20% ta:c "> black .1
 						<br> <code>bc:b.1</code> </div>
-					<div class="p:1r bc:b.05 bw:thick fb:20% ta:c"> black .05
+					<div class="p:1r bc:b.05 bw:thick fb:20% ta:c "> black .05
 						<br> <code>bc:b.05</code> </div>
-					<div class="p:1r bc:b.025 bw:thick fb:20% ta:c"> black .025
+					<div class="p:1r bc:b.025 bw:thick fb:20% ta:c "> black .025
 						<br> <code>bc:b.025</code> </div>
 				</div>
 				<!-- shades of white -->
 				<div class="d:f@md fw:w fw:b c:w bgc:b ">
-					<div class="p:1r bc:w bw:thick fb:20% ta:c bc:w"> white
+					<div class="p:1r bc:w bw:thick fb:20% ta:c bc:w "> white
 						<br> <code>bc:w</code> </div>
-					<div class="p:1r bc:w.9 bw:thick fb:20% ta:c bbc:w"> white .9
+					<div class="p:1r bc:w.9 bw:thick fb:20% ta:c bbc:w "> white .9
 						<br> <code>bc:w.9</code> </div>
-					<div class="p:1r bc:w.8 bw:thick fb:20% ta:c bbc:w"> white .8
+					<div class="p:1r bc:w.8 bw:thick fb:20% ta:c bbc:w "> white .8
 						<br> <code>bc:w.8</code> </div>
-					<div class="p:1r bc:w.7 bw:thick fb:20% ta:c bbc:w"> white .7
+					<div class="p:1r bc:w.7 bw:thick fb:20% ta:c bbc:w "> white .7
 						<br> <code>bc:w.7</code> </div>
-					<div class="p:1r bc:w.6 bw:thick fb:20% ta:c bbc:w"> white .6
+					<div class="p:1r bc:w.6 bw:thick fb:20% ta:c bbc:w "> white .6
 						<br> <code>bc:w.6</code> </div>
-					<div class="p:1r bc:w.5 bw:thick fb:20% ta:c bbc:w"> white .5
+					<div class="p:1r bc:w.5 bw:thick fb:20% ta:c bbc:w "> white .5
 						<br> <code>bc:w.5</code> </div>
-					<div class="p:1r bc:w.4 bw:thick fb:20% ta:c bbc:w"> white .4
+					<div class="p:1r bc:w.4 bw:thick fb:20% ta:c bbc:w "> white .4
 						<br> <code>bc:w.4</code> </div>
-					<div class="p:1r bc:w.3 bw:thick fb:20% ta:c bbc:w"> white .3
+					<div class="p:1r bc:w.3 bw:thick fb:20% ta:c bbc:w "> white .3
 						<br> <code>bc:w.3</code> </div>
-					<div class="p:1r bc:w.2 bw:thick fb:20% ta:c bbc:w"> white .2
+					<div class="p:1r bc:w.2 bw:thick fb:20% ta:c bbc:w "> white .2
 						<br> <code>bc:w.2</code> </div>
-					<div class="p:1r bc:w.1 bw:thick fb:20% ta:c bbc:w"> white .1
+					<div class="p:1r bc:w.1 bw:thick fb:20% ta:c bbc:w "> white .1
 						<br> <code>bc:w.1</code> </div>
 				</div>
 			</article>
-			<article id="theme__background-image">
+			<article id="theme__background-image ">
 				<header>
 					<h3>background-image</h3> </header>
 				<!-- color gardients -->
-				<div class="d:f@md fw:w fw:b c:w" style="margin-left: -.25rem; margin-right: -.25rem;">
-					<div class="p:1r bgi:red bw:medium fb:20% ta:c bc:t"> red
+				<div class="d:f@md fw:w fw:b c:w " style="margin-left: -.25rem; margin-right: -.25rem; ">
+					<div class="p:1r bgi:red bw:medium fb:20% ta:c bc:t "> red
 						<br> <code>bgi:red</code> </div>
-					<div class="p:1r bgi:orange bw:medium fb:20% ta:c bc:t"> orange
+					<div class="p:1r bgi:orange bw:medium fb:20% ta:c bc:t "> orange
 						<br> <code>bgi:orange</code> </div>
-					<div class="p:1r bgi:yellow bw:medium fb:20% ta:c bc:t"> yellow
+					<div class="p:1r bgi:yellow bw:medium fb:20% ta:c bc:t "> yellow
 						<br> <code>bgi:yellow</code> </div>
-					<div class="p:1r bgi:lime bw:medium fb:20% ta:c bc:t"> lime
+					<div class="p:1r bgi:lime bw:medium fb:20% ta:c bc:t "> lime
 						<br> <code>bgi:lime</code> </div>
-					<div class="p:1r bgi:green bw:medium fb:20% ta:c bc:t"> green
+					<div class="p:1r bgi:green bw:medium fb:20% ta:c bc:t "> green
 						<br> <code>bgi:green</code> </div>
-					<div class="p:1r bgi:teal bw:medium fb:20% ta:c bc:t"> teal
+					<div class="p:1r bgi:teal bw:medium fb:20% ta:c bc:t "> teal
 						<br> <code>bgi:teal</code> </div>
-					<div class="p:1r bgi:cyan bw:medium fb:20% ta:c bc:t"> cyan
+					<div class="p:1r bgi:cyan bw:medium fb:20% ta:c bc:t "> cyan
 						<br> <code>bgi:cyan</code> </div>
-					<div class="p:1r bgi:blue bw:medium fb:20% ta:c bc:t"> blue
+					<div class="p:1r bgi:blue bw:medium fb:20% ta:c bc:t "> blue
 						<br> <code>bgi:blue</code> </div>
-					<div class="p:1r bgi:indigo bw:medium fb:20% ta:c bc:t"> indigo
+					<div class="p:1r bgi:indigo bw:medium fb:20% ta:c bc:t "> indigo
 						<br> <code>bgi:indigo</code> </div>
-					<div class="p:1r bgi:violet bw:medium fb:20% ta:c bc:t"> violet
+					<div class="p:1r bgi:violet bw:medium fb:20% ta:c bc:t "> violet
 						<br> <code>bgi:violet</code> </div>
-					<div class="p:1r bgi:magenta bw:medium fb:20% ta:c bc:t"> magenta
+					<div class="p:1r bgi:magenta bw:medium fb:20% ta:c bc:t "> magenta
 						<br> <code>bgi:magenta</code> </div>
-					<div class="p:1r bgi:pink bw:medium fb:20% ta:c bc:t"> pink
+					<div class="p:1r bgi:pink bw:medium fb:20% ta:c bc:t "> pink
 						<br> <code>bgi:pink</code> </div>
-					<div class="p:1r bgi:brown bw:medium fb:20% ta:c bc:t"> brown
+					<div class="p:1r bgi:brown bw:medium fb:20% ta:c bc:t "> brown
 						<br> <code>bgi:brown</code> </div>
 				</div>
 			</article>
-			<article id="theme__border-image">
+			<article id="theme__border-image ">
 				<header>
 					<h3>border-image</h3> </header>
 				<!-- color gardients -->
-				<div class="d:f@md fw:w fw:b">
-					<div class="p:1r bi:red bw:thick fb:20% ta:c"> red
+				<div class="d:f@md fw:w fw:b ">
+					<div class="p:1r bi:red bw:thick fb:20% ta:c "> red
 						<br> <code>bi:red</code> </div>
-					<div class="p:1r bi:orange bw:thick fb:20% ta:c"> orange
+					<div class="p:1r bi:orange bw:thick fb:20% ta:c "> orange
 						<br> <code>bi:orange</code> </div>
-					<div class="p:1r bi:yellow bw:thick fb:20% ta:c"> yellow
+					<div class="p:1r bi:yellow bw:thick fb:20% ta:c "> yellow
 						<br> <code>bi:yellow</code> </div>
-					<div class="p:1r bi:lime bw:thick fb:20% ta:c"> lime
+					<div class="p:1r bi:lime bw:thick fb:20% ta:c "> lime
 						<br> <code>bi:lime</code> </div>
-					<div class="p:1r bi:green bw:thick fb:20% ta:c"> green
+					<div class="p:1r bi:green bw:thick fb:20% ta:c "> green
 						<br> <code>bi:green</code> </div>
-					<div class="p:1r bi:teal bw:thick fb:20% ta:c"> teal
+					<div class="p:1r bi:teal bw:thick fb:20% ta:c "> teal
 						<br> <code>bi:teal</code> </div>
-					<div class="p:1r bi:cyan bw:thick fb:20% ta:c"> cyan
+					<div class="p:1r bi:cyan bw:thick fb:20% ta:c "> cyan
 						<br> <code>bi:cyan</code> </div>
-					<div class="p:1r bi:blue bw:thick fb:20% ta:c"> blue
+					<div class="p:1r bi:blue bw:thick fb:20% ta:c "> blue
 						<br> <code>bi:blue</code> </div>
-					<div class="p:1r bi:indigo bw:thick fb:20% ta:c"> indigo
+					<div class="p:1r bi:indigo bw:thick fb:20% ta:c "> indigo
 						<br> <code>bi:indigo</code> </div>
-					<div class="p:1r bi:violet bw:thick fb:20% ta:c"> violet
+					<div class="p:1r bi:violet bw:thick fb:20% ta:c "> violet
 						<br> <code>bi:violet</code> </div>
-					<div class="p:1r bi:magenta bw:thick fb:20% ta:c"> magenta
+					<div class="p:1r bi:magenta bw:thick fb:20% ta:c "> magenta
 						<br> <code>bi:magenta</code> </div>
-					<div class="p:1r bi:pink bw:thick fb:20% ta:c"> pink
+					<div class="p:1r bi:pink bw:thick fb:20% ta:c "> pink
 						<br> <code>bi:pink</code> </div>
-					<div class="p:1r bi:brown bw:thick fb:20% ta:c"> brown
+					<div class="p:1r bi:brown bw:thick fb:20% ta:c "> brown
 						<br> <code>bi:brown</code> </div>
 				</div>
 			</article>
 		</section>
 	</main>
-	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address> Greatly inspired by <a href="http://basscss.com" target="_blank">basscss</a>, <a href="http://tachyons.io" target="_blank">tachyons</a> and <a href="https://github.com/chantastic/minions.css" target="_blank">minions</a>.</footer>
+	<footer class="p:2r bgc:b c:w ">Created by <address class="d:i "><a href="mailto:gerbaulet@hs-ulm.de ">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address> Greatly inspired by <a href="http://basscss.com
+					    " target="_blank ">basscss</a>, <a href="http://tachyons.io " target="_blank ">tachyons</a> and <a href="https://github.com/chantastic/minions.css " target="_blank ">minions</a>.</footer>
 </body>
 
 </html>
