Right border on overflow-x demos.

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 			<article id="layout__top">
 				<header>
 					<h3>top</h3> </header>
-				<div class="ox:s ws:nw brw:medium brw:0@lg py:4r">
+				<div class="ox:s ws:nw brw:medium brw:0@xl py:4r">
 					<div class="p:a w:90% btw:thin bc:cyan"></div>
 					<div class="btw:thin d:ib p:r t:-4r p:.5r"><span>-4rem</span> <code>t:-4r</code></div>
 					<div class="btw:thin d:ib p:r t:-2r p:.5r"><span>-2rem</span> <code>t:-2r</code></div>
@@ -674,7 +674,7 @@
 			<article id="layout__bottom">
 				<header>
 					<h3>bottom</h3> </header>
-				<div class="ox:s ws:nw  brw:medium brw:0@lg py:4r">
+				<div class="ox:s ws:nw  brw:medium brw:0@xl py:4r">
 					<div class="bbw:thin d:ib p:r b:-4r p:.5r"><span>-4rem</span> <code>b:-4r</code></div>
 					<div class="bbw:thin d:ib p:r b:-2r p:.5r"><span>-2rem</span> <code>b:-2r</code></div>
 					<div class="bbw:thin d:ib p:r b:-1r p:.5r"><span>-1rem</span> <code>b:-1r</code></div>
