Added opacity module and demo.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 						<li><a href="#theme__border-color">border-color</a></li>
 						<li><a href="#theme__background-image">background-image</a></li>
 						<li><a href="#theme__border-image">border-image</a></li>
+						<li><a href="#theme__opacity">opacity</a></li>
 					</ul>
 				</li>
 		</ul>
@@ -1300,6 +1301,24 @@
 					<div class="p:1r bi:magenta bw:thick fb:20% ta:c"> magenta <br> <code>bi:magenta</code> </div>
 					<div class="p:1r bi:pink bw:thick fb:20% ta:c"> pink <br> <code>bi:pink</code> </div>
 					<div class="p:1r bi:brown bw:thick fb:20% ta:c"> brown <br> <code>bi:brown</code> </div>
+				</div>
+			</article>
+			<article id="layout__opacity">
+				<header class="p:r">
+					<h3>opacity</h3>
+					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+				</header>
+				<div class="ta:c">
+					<div><span class="o:i o:.1:h p:r r:1r py:.5r px:2r bw:thin bgc:b c:w w:4r fs:1.5r">initial</span> <code>o:i</code></div>
+					<div><span class="o:.9 o:.2:h p:r r:1r py:.5r px:2r bw:thin bgc:b c:w w:4r fs:1.5r">.9</span> <code>o:.9</code></div>
+					<div><span class="o:.8 o:.3:h p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.8</span> <code>o:.8</code></div>
+					<div><span class="o:.7 o:.4:h p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.7</span> <code>o:.7</code></div>
+					<div><span class="o:.6 o:.5:h p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.6</span> <code>o:.6</code></div>
+					<div><span class="o:.5 o:.6:h p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.5</span> <code>o:.5</code></div>
+					<div><span class="o:.4 o:.7:h p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.4</span> <code>o:.4</code></div>
+					<div><span class="o:.3 o:.8:h p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.3</span> <code>o:.3</code></div>
+					<div><span class="o:.2 o:.9:h p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.2</span> <code>o:.2</code></div>
+					<div><span class="o:.1 o:i:h p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.1</span> <code>o:.1</code></div>
 				</div>
 			</article>
 		</section>
