--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 				<div><span class="p:a r:1r fs:1.5r">absolute</span> <code>p:a</code></div>
 				<div>
 					<nav>
-						<a class="p:f zi:2 b:1r r:1r h:4r w:4r br:100% bgc:w.8 d:f ai:c jc:c bs:.125r bs:.5r:h" href="#top" style="-webkit-backdrop-filter: blur(.125rem)"> <svg data-icon="chevronUp" viewBox="0 0 32 32" class="h:1r w:1r">
+						<a class="p:f zi:2 b:1r r:1r h:4r w:4r br:100% bgc:w.8 d:f ai:c jc:c bs:.125r bs:.5r:h o:.8:h" href="#top" style="-webkit-backdrop-filter: blur(.125rem)"> <svg data-icon="chevronUp" viewBox="0 0 32 32" class="h:1r w:1r">
 								<title>Arrow pointing upwards</title>
 								<path d="M1 20 L16 6 L31 20 L27 24 L16 14 L5 24 z"></path>
 							</svg> </a>
@@ -1192,7 +1192,7 @@
 				<!-- overlay demo -->
 				<h4>Creating tints with a little parent/child nesting trick</h4>
 				<p>For example: <code>bgc:blue + bgc:w.9</code></p>
-				<div class="bgc:blue c:w.5 d:f@lg">
+				<div class="bgc:blue d:f@lg">
 					<div class="p:1r bgc:w.9"></div>
 					<div class="p:1r bgc:w.8"></div>
 					<div class="p:1r bgc:w.7"></div>
@@ -1202,7 +1202,7 @@
 					<div class="p:1r bgc:w.3"></div>
 					<div class="p:1r bgc:w.2"></div>
 					<div class="p:1r bgc:w.1"></div>
-					<div class="p:1r ta:c tt:u ls:1e fg:1">shades of blue</div>
+					<div class="p:1r ta:c tt:u ls:1e fg:1 c:w">shades of blue</div>
 					<div class="p:1r bgc:b.1"></div>
 					<div class="p:1r bgc:b.2"></div>
 					<div class="p:1r bgc:b.3"></div>
