--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
 					<div class="p:1r bi:brown bw:thick fb:20% ta:c"> brown <br> <code>bi:brown</code> </div>
 				</div>
 			</article>
-			<article id="layout__opacity">
+			<article id="theme__opacity">
 				<header class="p:r">
 					<h3>opacity</h3>
 					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
