--- a/index.html
+++ b/index.html
@@ -6,58 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>blink | docs</title>
 	<link href="css/blank.css" rel="stylesheet">
+	<link href="css/layout.css" rel="stylesheet">
 	<link href="css/blink.css" rel="stylesheet">
-	<link rel="apple-touch-icon" href="/blink.png">
-	<link rel="mask-icon" href="/blink_icon.svg" color="#f53d5c">
-	<link rel="icon" href="/blink_icon.png">
+	<link rel="apple-touch-icon" href="blink.png">
+	<link rel="mask-icon" href="blink_icon.svg" color="#f53d5c">
+	<link rel="icon" href="blink_icon.png">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="blinkUI">
-	<meta name="theme-color" content="#f53d5c">
-	<style>
-		nav#toc {
-			margin-bottom: var(--2);
-		}
-
-		header>h2 {
-			margin-top: var(--2);
-		}
-
-		article {
-			padding: var(--2);
-		}
-
-		article:last-of-type {
-			padding-bottom: var(--8);
-		}
-
-		article:nth-child(odd) {
-			background-color: var(--darken);
-		}
-
-		article>header>h3 {
-			display: inline-block;
-			background-color: var(--color-text);
-			color: var(--bg-color);
-			padding: var(--1);
-			font-family: 'Roboto Mono', 'Source Code Pro', Menlo, Consolas, 'Liberation Mono', monospace
-		}
-
-		@keyframes fade {
-			from {
-				opacity: 0;
-			}
-		}
-
-		body {
-			animation: 1s fade ease-in-out
-		}
-		/* Fake page transition (fade-in) */
-	</style>
-</head>
+	<meta name="theme-color" content="#f53d5c"> </head>
 
 <body class="ox:h">
-	<nav id="nav__global" class="ox:s ws:nw px:1r bgc:b.1 d:f ff:m fs:.75r tt:u ls:.25e c:red">
-		<!--<a href="#" class="mr:1r c:b:h py:1r">Overview</a>--><a href="#" class="mr:1r c:b:h py:1r bbw:medium fw:700">Docs</a>
+	<nav class="ox:s ws:nw px:1r bgc:b.1 d:f ff:m fs:.75r tt:u ls:.25e c:red">
+		<!--<a href="#" class="mr:1r c:b:h py:1r">Overview</a>--><a href="#" class="mr:1r o:.6:h py:1r bbw:medium fw:700">Docs</a>
 		<!--<a href="#" class="mr:1r c:b:h py:1r">Components</a>-->
 		<div class="d:ib ml:a"><a href="blank.html" class="mr:1r c:b.4 c:b:h py:1r">blank.css</a><a href="https://github.com/blinkui/blinkui.github.io" class="c:b.4 c:b:h py:1r"><span class="mr:.25r d:n d:ib@md">Github</span><svg aria-hidden="true" class="h:2r w:2r p:.25r p:r t:.5r" version="1.1" viewBox="0 0 16 16" width="32"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg></a></div>
 	</nav>
@@ -66,7 +26,7 @@
 		<h1 class="m:0 c:red c:w:h fw:700 ls:-.0625e" style="font-family: 'Avenir Next', Avenir">blink<span class="c:b.3 fw:200 tt:u">ui</span></h1>
 		<p class="m:0 lh:1.25"><u>Web and interface design in the <span class="c:red:h">blink</span> of an eye.</u></p>
 	</header>
-	<nav id="toc" class="p:2r ox:s ws:nw brw:medium brw:0@xl bc:red c:b.3 fs:1.5r@xl">
+	<nav id="toc" class="mb:2r p:2r ox:s ws:nw brw:medium brw:0@xl bc:red c:b.3 fs:1.5r@xl">
 		<ul>
 			<li class="d:f mr_1r mb_1r"> <b><a href="#typo">Typography</a></b>
 				<ul class="d:f mr_.5r">
@@ -1323,8 +1283,8 @@
 			</article>
 		</section>
 	</main>
-	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address> Greatly inspired by <a href="http://basscss.com
-					    " target="_blank">basscss</a>, <a href="http://tachyons.io " target="_blank">tachyons</a> and <a href="https://github.com/chantastic/minions.css " target="_blank">minions</a>.</footer>
+	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address>. Greatly inspired by <a href="http://basscss" target="_blank">basscss</a> and <a href="http://tachyons.io"
+		    target="_blank">tachyons</a>.</footer>
 </body>
 
 </html>
