Fixed box-sizing demo.

--- a/index.html
+++ b/index.html
@@ -504,8 +504,9 @@
 			<article id="layout__box-sizing">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">box-sizing</h3> </header>
-				<div class="bs:cb w:16r p:4r ta:c bw:thick d:ib">content-box</div> <code>bs:cb</code> <br>
-				<div class="bs:bb w:16r p:4r ta:c bw:thick d:ib">border-box</div> <code>bs:bb</code>
+				<div class="ox:s ws:nw brw:medium brw:0@md">
+					<div class="bs:cb w:16r p:4r ta:c bw:thick d:ib">content-box</div> <code class="d:b mb:.5r">bs:cb</code>
+					<div class="bs:bb w:16r p:4r ta:c bw:thick d:ib">border-box</div> <code>bs:bb</code> </div>
 				<div><a class="c:b.3 ff:s fs:i" href="https://css-tricks.com/box-sizing/" target="_blank">Box Sizing explained</a></div>
 			</article>
 			<article id="layout__display">
